--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+*{
+  margin: 0;
+  padding: 0;
+}
 .App {
   text-align: center;
 }
@@ -36,3 +40,6 @@
     transform: rotate(360deg);
   }
 }
+
+
+
